# simple_kivy_form

./: .gitignore  kivyform.kv  main.py  pyproject.toml
